fix: poster image displayed incorrectly on mobile

--- a/elyreacts/src/pages/styles/Poster.module.scss
+++ b/elyreacts/src/pages/styles/Poster.module.scss
@@ -12,8 +12,8 @@
     position: relative;
     display: inline-block;
 
-    max-height: 100%;
-    max-width: 100%;
+    height: 100%;
+    width: 100%;
 
     overflow: hidden;
 
